--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "bootstrap": "^5.3.5",
     "chart.js": "^4.4.9",
     "chartjs-plugin-style": "^0.5.0",
+    "crypto-js": "^4.2.0",
     "ng2-charts": "^5.0.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -29,6 +30,7 @@
     "@angular-devkit/build-angular": "^19.2.9",
     "@angular/cli": "^19.2.9",
     "@angular/compiler-cli": "^19.2.0",
+    "@types/crypto-js": "^4.2.2",
     "@types/jasmine": "~5.1.0",
     "jasmine-core": "~5.6.0",
     "karma": "~6.4.0",
