--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "chart.js": "^4.4.9",
     "chartjs-plugin-style": "^0.5.0",
     "crypto-js": "^4.2.0",
+    "jwt-decode": "^4.0.0",
     "ng2-charts": "^5.0.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
