--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "jwt-decode": "^4.0.0",
     "ng2-charts": "^5.0.4",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.19.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
