--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,8 +21,13 @@
     "chart.js": "^4.4.9",
     "chartjs-plugin-style": "^0.5.0",
     "crypto-js": "^4.2.0",
+    "html2canvas": "^1.4.1",
+    "html2pdf.js": "^0.10.3",
+    "jspdf": "^3.0.1",
     "jwt-decode": "^4.0.0",
     "ng2-charts": "^5.0.4",
+    "ngx-toastr": "^19.0.0",
+    "polipop": "^1.0.0",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.19.1",
     "tslib": "^2.3.0",
