--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "@angular/platform-browser": "^19.2.0",
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/router": "^19.2.0",
+    "angular-cli": "^0.1.0",
     "bootstrap": "^5.3.5",
     "chart.js": "^4.4.9",
     "chartjs-plugin-style": "^0.5.0",
