--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "@angular/platform-browser": "^19.2.0",
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/router": "^19.2.0",
+    "@max-63/notify": "^1.0.7",
     "angular-cli": "^0.1.0",
     "bootstrap": "^5.3.5",
     "chart.js": "^4.4.9",
